# solution-pythonbasics

./: README.md  pyproject.toml
solution_pythonbasics/: __init__.py
solution_pythonbasics/limeobject_classes/: deal.py
